2-instance+vpc/vpc.tf
resource "aws_vpc" "demo-vpc"{
    cidr_block = "10.0.0.0/16"
    enable_dns_support = true
    enable_dns_hostnames = true
    instance_tenancy = "default"
    tags = {
        Name = "demo-vpc"
    }
}
